
** ykclient: Added --cai parameter to specify GnuTLS-compatible CA Info.

** libykclient: Added ykclient_set_ca_info function.
Used when curl is linked with GnuTLS, used to set CA Info.

** libykclient: Added ykclient_set_url_bases function.
Uses a more reasonable/extensible URL string syntax.  The old
ykclient_set_url_templates is hereby deprecated.

* Version 2.11 (released 2013-07-24)

** Fix breakage with latest automake.

* Version 2.10 (released 2013-05-15)

** Add ykclient_global_init and ykclient_global_done.

** Add ykclient_version.h header file with versioning information.
New symbols are YKCLIENT_VERSION_STRING, YKCLIENT_VERSION_NUMBER,
YKCLIENT_VERSION_MAJOR, YKCLIENT_VERSION_MINOR,
YKCLIENT_VERSION_PATCH.  New function ykclient_check_version.

** Modified API to use 'ykclient_rc' enum as return type instead of 'int'.
** Enum also moved to separate new header file ykclient_errors.h.
This should be backwards compatible.  It makes the return type
clearer.  From Arran Cudbard-Bell <a.cudbardb@freeradius.org>.

** Improve curl multi usage.
From Arran Cudbard-Bell <a.cudbardb@freeradius.org>.

** ykclient: Cleanup command line tool a bit to make it more useful.
Added --help, --version and --debug.  Defaults to silent output.  Exit
codes are documented and more useful.  Added manpage.

* Version 2.9 (released 2012-08-07)

** Compability with curl versions before 7.20.

** Fix signature checking on ARM (at least).

* Version 2.8 (released 2012-06-15)

** ykclient: Add C++ namespace protection.

** Add multi-server support with curl_multi.
   Enabled by default for YubiCloud servers.
   Settable with the new library function set_template_urls() or
   the urls parameter to ykclient_verify_otp_v2().

** Remove extra % in ykclient help.

** Add ca path option to ykclient, --ca.
   Patch from Jay Kline <jay.kline.ctr@hpcmo.hpc.mil>.

** Make the nonce unique for consecutive calls to the same ykclient handle.

** Do url encoding of OTP before sending.
